objects/redwing__Learning_Material__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Materials</relationshipLabel>
        <relationshipName>Learning_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>redwing__Material__c</referenceTo>
        <relationshipLabel>Learning Materials</relationshipLabel>
        <relationshipName>Learning_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Materials</relationshipLabel>
        <relationshipName>Learning_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Materials</relationshipLabel>
        <relationshipName>Learning_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Material</label>
    <nameField>
        <displayFormat>LMN-{0000}</displayFormat>
        <label>Learning Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Materials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>